--- a/src/components/layout/Navbar/Navbar.module.css
+++ b/src/components/layout/Navbar/Navbar.module.css
@@ -5,6 +5,7 @@
 }
 .content{
     flex-grow: 1;
+    overflow: hidden;
 }
 .logoContainer{
     display: flex;
